--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /frame/nbproject/private/
 /frame/build/
+/JLabel/nbproject/private/
+/JLabel/build/
+/Convertor/nbproject/private/
+/Convertor/build/
