--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@
 /JLabel/build/
 /Convertor/nbproject/private/
 /Convertor/build/
+/selecionarcheck/nbproject/private/
+/selecionarcheck/build/
+/radio/nbproject/private/
+/radio/build/
+/Ejerciciohijos/nbproject/private/
+/Ejerciciohijos/build/
