--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,7 @@
 /Combo/nbproject/private/
 /Combo/build/
 /Combo/dist/
+/Lista/nbproject/private/
+/Lista/build/
+/Cuidad/nbproject/private/
+/Cuidad/build/
