--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 /Lista/build/
 /Cuidad/nbproject/private/
 /Cuidad/build/
+/ejercicio5/nbproject/private/
+/ejercicio5/build/
+/Series/nbproject/private/
+/series/nbproject/private/
+/series/build/
