--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@
 /09.3. JListexample/JListexample/build/
 /sleccioneimpresion/nbproject/private/
 /sleccioneimpresion/build/
+/sleccioneimpresion_version2/nbproject/private/
+/sleccioneimpresion_version2/build/
