--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@
 /sleccioneimpresion/build/
 /sleccioneimpresion_version2/nbproject/private/
 /sleccioneimpresion_version2/build/
+/DbudgetPC/nbproject/private/
+/DbudgetPC/build/
