--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /sleccioneimpresion_version2/build/
 /DbudgetPC/nbproject/private/
 /DbudgetPC/build/
+/DChoosecomputer/nbproject/private/
+/DChoosecomputer/build/
