--- a/sleccioneimpresion_version2/nbproject/project.properties
+++ b/sleccioneimpresion_version2/nbproject/project.properties
@@ -35,11 +35,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/sleccioneimpresion_version2
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.4.0.jar=../itextpdf-5.4.0.jar
 file.reference.mysql-connector-java-8.0.22.jar=../mysql-connector-java-8.0.22.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-8.0.22.jar}
+    ${file.reference.mysql-connector-java-8.0.22.jar}:\
+    ${file.reference.itextpdf-5.4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
