--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@
 /DbudgetPC/build/
 /DChoosecomputer/nbproject/private/
 /DChoosecomputer/build/
+/Dpractica/nbproject/private/
+/Dpractica/build/
+/Dpractica/dist/
+/Hagman/nbproject/private/
+/DHagman/nbproject/private/
+/DHagman/build/
