--- a/newclasses/nbproject/private/private.properties
+++ b/newclasses/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/antcha/.netbeans/11.3/build.properties
+user.properties.file=/Users/antonio/Library/Application Support/NetBeans/11.3/build.properties
