--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,9 @@
 /Hagman/nbproject/private/
 /DHagman/nbproject/private/
 /DHagman/build/
+/DEjemplo/nbproject/private/
+/DEjemplo/build/
+/Dejemplo2/nbproject/private/
+/Dejemplo2/build/
+/Dejemplo3/nbproject/private/
+/Dejemplo3/build/
