--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@
 /Dejemplo2/build/
 /Dejemplo3/nbproject/private/
 /Dejemplo3/build/
+/weryery/nbproject/private/
+/DExamen/nbproject/private/
+/DExamen/build/
+/radio/dist/
+/Dexamen2/nbproject/private/
+/Dexamen2/build/
+/examen/nbproject/private/
