--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,11 @@
 /Dexamen2/nbproject/private/
 /Dexamen2/build/
 /examen/nbproject/private/
+/examen/build/
+/DJoptionPanels/nbproject/private/
+/DJoptionPanels/build/
+/DMenus/nbproject/private/
+/DMenus/build/
+/DMenus/dist/
+/Dmenus/nbproject/private/
+/Dmenus/build/
