--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,8 @@
 /DMenus/dist/
 /Dmenus/nbproject/private/
 /Dmenus/build/
+/Dmenus2/nbproject/private/
+/Dmenus2/build/
+/Dcasa/nbproject/private/
+/Dcasa/build/
+/Dcasa/dist/
