--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@
 /Dcasa/nbproject/private/
 /Dcasa/build/
 /Dcasa/dist/
+/DJTable/nbproject/private/
+/DJTable/build/
+/DJTable/dist/
+/DjtableSQL/nbproject/private/
+/DjtableSQL/build/
