--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@
 /DJTable/dist/
 /DjtableSQL/nbproject/private/
 /DjtableSQL/build/
+/Dproyecto/nbproject/private/
+/Dproyecto/build/
+/Dproyecto2/nbproject/private/
+/Dproyecto2/target/
