--- a/Dproyecto/nbproject/project.properties
+++ b/Dproyecto/nbproject/project.properties
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Dproyecto
-main.class=dproyecto.Dproyecto
+main.class=Vista.Dproyecto1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
