--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@
 /Dproyecto2/nbproject/private/
 /Dproyecto2/target/
 /Dproyecto/dist/
+/proyec/CrudExercise/nbproject/private/
+/proyec/CrudExercise/build/
