--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,5 @@
 /Accesodatos/Acomprin/build/
 /Accesodatos/Acomprin/dist/
 /Accesodatos/Persistencia/target/
+/Accesodatos/AgendaWebJPA/target/
+/Accesodatos/Agendaweb/target/
