--- a/Accesodatos/Agendaweb/pom.xml
+++ b/Accesodatos/Agendaweb/pom.xml
@@ -53,6 +53,12 @@
        <artifactId>log4j-core</artifactId>
        <version>2.12.0</version>
    </dependency>
+   
+   <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>jstl</artifactId>
+         <version>1.2</version>
+     </dependency>
 
     </dependencies>
 
