--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@
 /Accesodatos/Persistencia/target/
 /Accesodatos/AgendaWebJPA/target/
 /Accesodatos/Agendaweb/target/
+/Accesodatos/NuevaAgendaWEBJPA/target/
