--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,5 @@
 /Accesodatos/AgendaWebJPA/target/
 /Accesodatos/Agendaweb/target/
 /Accesodatos/NuevaAgendaWEBJPA/target/
+/Accesodatos/WebComprin/target/
+/Accesodatos/Wcom/target/
