--- a/Accesodatos/accesodatos/nbproject/private/private.properties
+++ b/Accesodatos/accesodatos/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/home/antcha/.netbeans/12.0/build.properties
+user.properties.file=/Users/antonio/Library/Application Support/NetBeans/12.0/build.properties
