--- a/.gitignore
+++ b/.gitignore
@@ -89,3 +89,6 @@
 /Accesodatos/NuevaAgendaWEBJPA/target/
 /Accesodatos/WebComprin/target/
 /Accesodatos/Wcom/target/
+/PSP/IP/target/
+/PSP/url/nbproject/private/
+/PSP/url/build/
