--- a/.gitignore
+++ b/.gitignore
@@ -93,3 +93,5 @@
 /PSP/url/nbproject/private/
 /PSP/url/build/
 /Accesodatos/ComprimWEB/target/
+/PSP/flujodedatos/nbproject/private/
+/PSP/flujodedatos/build/
