--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,5 @@
 /Accesodatos/ComprimWEB/target/
 /PSP/flujodedatos/nbproject/private/
 /PSP/flujodedatos/build/
+/Accesodatos/WEBCOMPRIM/target/
+/Accesodatos/WEMCOMPRIN1/target/
