--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,5 @@
 /PSP/flujodedatos/build/
 /Accesodatos/WEBCOMPRIM/target/
 /Accesodatos/WEMCOMPRIN1/target/
+/PSP/DATA/nbproject/private/
+/PSP/DATA/build/
