--- a/.gitignore
+++ b/.gitignore
@@ -99,3 +99,5 @@
 /Accesodatos/WEMCOMPRIN1/target/
 /PSP/DATA/nbproject/private/
 /PSP/DATA/build/
+/PSP/chat/nbproject/private/
+/PSP/DatagramSocketServer/nbproject/private/
