--- a/Accesodatos/Acomprin/nbproject/private/private.properties
+++ b/Accesodatos/Acomprin/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/antonio/Library/Application Support/NetBeans/12.0/build.properties
+user.properties.file=/home/antcha/.netbeans/12.0/build.properties
