--- a/.gitignore
+++ b/.gitignore
@@ -101,3 +101,4 @@
 /PSP/DATA/build/
 /PSP/chat/nbproject/private/
 /PSP/DatagramSocketServer/nbproject/private/
+/Accesodatos/NuevaWEBCOMPRIM/target/
