--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,7 @@
 /PSP/chat/nbproject/private/
 /PSP/DatagramSocketServer/nbproject/private/
 /Accesodatos/NuevaWEBCOMPRIM/target/
+/PSP/DatagramSocketServer/build/
+/PSP/Chat/target/
+/PSP/Chat1/nbproject/private/
+/PSP/Chat1/build/
